# pi-room

./: Cargo.toml  README.md  index.js  package-lock.json  package.json  pi-room.service
spec/: audio.spec.js  multi_node_functionality.spec.js
spec/helpers/: test_environment.js  timeout.js
src/: brain.js  broadcast.js  controllerInfo.js  hue.js  locationHandler.js  main.rs  proximity.js  range.js  rf.js  spotifyHandler.js  utils.rs
src/utils/: brain.rs  proximity.rs
