[package]
name = "pi-room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.1", features=["bluetoothd", "serde"]}
tokio = { version = "1", features=["macros", "rt-multi-thread"]}
futures = "0.3"
serde_json = "1"